--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,20 @@ body {
   font-family: "Lato", sans-serif;
 }
 
-.card,
+h1 {
+  font-size: 3rem;
+  font-weight: 900;
+}
+
+p {
+  font-size: 1.2rem;
+  font-weight: 100;
+}
+
+a {
+  text-decoration: none;
+}
+
 .container {
   max-width: 600px;
   margin: 30px auto;
@@ -13,12 +26,12 @@ body {
   text-align: center;
 }
 
-h1 {
-  font-size: 3rem;
-  font-weight: 900;
+.temperature {
+  font-size: 2.7rem;
 }
 
-p {
-  font-size: 1.2rem;
-  font-weight: 100;
+.units {
+  position: relative;
+  font-size: 1rem;
+  top: -1.3rem;
 }
