--- a/src/style.css
+++ b/src/style.css
@@ -34,14 +34,19 @@ a {
   text-align: center;
 }
 
+.card-text {
+  margin-top: 1.5rem;
+  font-size: 1.7rem;
+}
+
 .temperature {
-  font-size: 2.7rem;
+  font-size: 4rem;
 }
 
 .units {
   position: relative;
   font-size: 1rem;
-  top: -1.3rem;
+  top: -2.5rem;
 }
 
 .city-input,
